Refactor RiderService related maintainability issues